--- a/public/index.html
+++ b/public/index.html
@@ -1020,7 +1020,7 @@ overflow:auto;
 	    <h6 id="site-name">
 	   	 <div class="col-sm-12" id="header1">
 		<div class="col-sm-3">
-		<img src="images/interface.png">
+		<!-- <img src="images/interface.png"> -->
 		</div>
 	   	</h6>
 	    <!-- Navigation menus -->
@@ -1174,10 +1174,13 @@ overflow:auto;
         </ul>
       </nav>
       <p id="footer-copyright">
-      	&copy; 2017 Interface, Inc. All rights reserved.
+      	<!-- &copy; 2017 Interface, Inc. All rights reserved.
       	<a href="/US/en-US/legaldisclaimer">Legal Disclaimer</a>
       	<a href="/US/en-US/privacy-policy">Privacy Policy</a>
-      	<br>Interface, Inc. is the world's largest manufacturer of commercial carpet tile and is setting the pace for development of modular carpet using materials and processes that take less from the environment.<br>No part of this website may be reproduced or otherwise used without the express written consent of Interface, Inc.
+      	<br>Interface, Inc. is the world's largest manufacturer of commercial carpet tile and is
+		setting the pace for development of modular carpet using materials and processes 
+		that take less from the environment.<br>No part of this website may be reproduced or 
+		otherwise used without the express written consent of Interface, Inc. -->
      </p>
     </div>
     <!-- Secondary footer content -->
@@ -1185,10 +1188,10 @@ overflow:auto;
       <ul id="footer-social-links">
 
 <div align="right">
-				Connect with Interface
+				<!-- Connect with Interface -->
 			</div>
-        <li><a class="facebook" href="https://facebook.com/Interface" target="_blank"><i style="color:black" class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li><li><a class="twitter" href="https://twitter.com/InterfaceInc" target="_blank"><i style="color:black" class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li><li><a class="youtube" href="https://www.youtube.com/c/interface" target="_blank"><i style="color:black" class="fa fa-youtube fa-2x" aria-hidden="true"></i></a></li><li><a class="linkedin" href="https://www.linkedin.com/company/interface" target="_blank"><i style="color:black" class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
-           <div align="right">
+        <!-- <li><a class="facebook" href="https://facebook.com/Interface" target="_blank"><i style="color:black" class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li><li><a class="twitter" href="https://twitter.com/InterfaceInc" target="_blank"><i style="color:black" class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></li><li><a class="youtube" href="https://www.youtube.com/c/interface" target="_blank"><i style="color:black" class="fa fa-youtube fa-2x" aria-hidden="true"></i></a></li><li><a class="linkedin" href="https://www.linkedin.com/company/interface" target="_blank"><i style="color:black" class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></li>
+           <div align="right"> -->
              
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   
