--- a/public/claimdetails.html
+++ b/public/claimdetails.html
@@ -98,7 +98,7 @@ font-size:12px;
  <div class="col-sm-12">
 	 <div class="col-sm-6">
 		<div class="col-sm-12">
-		<label>Interface Americas,Inc Interface FLOR,LLC</label>
+		<label></label>
 		</div>
 		<div class="col-sm-12">
 		<label>Customer #:</label>	{{cnumber}}
