--- a/public/orderdetails.html
+++ b/public/orderdetails.html
@@ -149,7 +149,7 @@ font-size:12px;
 					</div>
 					<div class="col-sm-4">
 						<b> Sales Information</b><br>
-						<p>JOHN BRADSON , JR ,AL 100-978662 AL.JOHNBRADSON@INTERFACE.COM
+						<p>JOHN BRADSON , JR ,AL 100-978662 AL.JOHNBRADSON@GMAIL.COM
 						</p>
 					</div>
 				</div>
