--- a/public/index.html
+++ b/public/index.html
@@ -1133,11 +1133,9 @@ overflow:auto;
               <strong>Carmen</strong>
               <span class="glyphicon glyphicon-remove  pull-right" id="cross"></span>
       </div>
-      <div  class="messages" style="background-color:white;padding-bottom:10px;">
-		<div id="chat-body">
-          <div style="background-color:#f0f0ee;" ng-repeat="mess in chatbotmessages track by $index" ng-class="{'message message-personal':mess.personal==true,'message new':mess.new==true}" ><figure class="avatar"><img ng-src="{{mess.personal?'images/account.png':'images/mira1.png'}}" class="img1" /></figure>{{mess.value}}</div>
-		</div>
-	  </div>
+      <div  class="messages" id="chat-body" style="background-color:white;">
+          <div style="background-color:#f0f0ee;padding-bottom:10px;" ng-repeat="mess in chatbotmessages track by $index" ng-class="{'message message-personal':mess.personal==true,'message new':mess.new==true}" ><figure class="avatar"><img ng-src="{{mess.personal?'images/account.png':'images/mira1.png'}}" class="img1" /></figure>{{mess.value}}</div>
+      </div>
       <div class="message-box">
           <input type="text"  class="message-input" ng-model="inputText" placeholder="Type message" ng-submit="submitMessage()"></input>
           <button  class="message-submit"  ng-click="submitMessage()" >Send</button>
