--- a/public/index.html
+++ b/public/index.html
@@ -1133,7 +1133,7 @@ overflow:auto;
               <strong>Carmen</strong>
               <span class="glyphicon glyphicon-remove  pull-right" id="cross"></span>
       </div>
-      <div  class="messages" id="chat-body" style="background-color:white;">
+      <div  class="messages" id="chat-body" style="background-color:white;overflow-y:auto;">
           <div style="background-color:#f0f0ee;padding-bottom:10px;" ng-repeat="mess in chatbotmessages track by $index" ng-class="{'message message-personal':mess.personal==true,'message new':mess.new==true}" ><figure class="avatar"><img ng-src="{{mess.personal?'images/account.png':'images/mira1.png'}}" class="img1" /></figure>{{mess.value}}</div>
       </div>
       <div class="message-box">
