--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,11 @@
    <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script> -->
    <script src="https://cdn.rawgit.com/niklasvh/html2canvas/0.5.0-alpha2/dist/html2canvas.min.js"></script>
    <!-- <script src="../node_modules/jsPDF/dist/jspdf.debug.js"></script> -->
-   <script src="./node_modules/angular-save-html-to-pdf/dist/saveHtmlToPdf.min"></script>
+   <script src="./node_modules/angular-save-html-to-pdf/dist/saveHtmlToPdf.min.js"></script>
 	<link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/table.css" />
-     
+     <script src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/0.9.0rc1/jspdf.min.js"></script>
 		<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
