--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
    <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script> -->
    <script src="https://cdn.rawgit.com/niklasvh/html2canvas/0.5.0-alpha2/dist/html2canvas.min.js"></script>
    <!-- <script src="../node_modules/jsPDF/dist/jspdf.debug.js"></script> -->
-   <script src="./node_modules/angular-save-html-to-pdf/dist/saveHtmlToPdf.min.js"></script>
+   <!--<script src="./node_modules/angular-save-html-to-pdf/dist/saveHtmlToPdf.min.js"></script>-->
 	<link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/table.css" />
      <script src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
